--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "@capacitor/core": "2.4.0",
     "@ionic/react": "^5.3.2",
     "@ionic/react-router": "^5.3.2",
+    "@swyx/hooks": "^0.0.20",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "ionicons": "^5.1.2",
-    "@swyx/hooks": "^0.0.20",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "express": "^4.17.1",
+    "ionicons": "^5.1.2",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "typescript": "^4.0.2",
-    "react-router-dom": "^5.2.0"
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "run-p start:**",
