--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.4.0",
+    "@ionic/pwa-elements": "^3.0.1",
     "@ionic/react": "^5.3.2",
     "@ionic/react-router": "^5.3.2",
     "@swyx/hooks": "^0.0.20",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
-    "@types/jest": "^26.0.12",
-    "@types/node": "^14.6.2",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.3",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "express": "^4.17.1",
     "ionicons": "^5.1.2",
     "node-fetch": "^2.6.0",
@@ -49,11 +52,11 @@
   "devDependencies": {
     "@babel/plugin-transform-object-assign": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@capacitor/cli": "2.4.0",
     "@types/aws-lambda": "^8.10.61",
     "babel-loader": "^8.1.0",
     "http-proxy-middleware": "^1.0.5",
     "netlify-lambda": "^2.0.1",
-    "npm-run-all": "^4.1.5",
-    "@capacitor/cli": "2.4.0"
+    "npm-run-all": "^4.1.5"
   }
 }
